--- a/TheWheelOfTime/lines/index.html
+++ b/TheWheelOfTime/lines/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="img/icon2.png" />
     <title>The Wheel of Time Story Lines</title>
+
+
+    <iframe src="https://taratatuy.github.io/YaMetrika_global.html" frameborder="0" height="0" width="0"></iframe>
+
 </head>
 
 <body>
