--- a/404.html
+++ b/404.html
@@ -43,7 +43,7 @@
             <a href="https://taratatuy.github.io/sheets-trening/">sheets-trening</a>
           </li>
           <li>
-            <a href="https://taratatuy.github.io/SplineInterpolation/">sheets-trening</a>
+            <a href="https://taratatuy.github.io/SplineInterpolation/">Spline Interpolation</a>
           </li>
         </ul>
       </div>
