--- a/SplineInterpolation/index.html
+++ b/SplineInterpolation/index.html
@@ -5,15 +5,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Spline Interpolation</title>
-    <script src="math.min.js"></script>
-    <script src="Chart.min.js"></script>
-    <script src="pearson-correlation.js"></script>
+    <script src="libs/math.min.js"></script>
+    <script src="libs/Chart.min.js"></script>
+    <script src="libs/pearson-correlation.js"></script>
     <script src="SplineInterpolation.js"></script>
     <script src="Builder.js"></script>
     <script src="Menu.js"></script>
+    <link rel="stylesheet" href="libs/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+        crossorigin="anonymous"></script>
 </head>
 
 <body class="h-100">
@@ -21,12 +27,16 @@
         <header></header>
         <main class="container-fluid d-flex flex-grow-1 justify-content-center">
             <div class="container-fluid row px-0 px-lg-2">
-                <div class="inputs col-sm-12 col-lg-3">
+                <div class="inputs col-sm-12 col-lg-4 ">
                     <div class="formula-input col-12">
                         <div class="form-group">
                             <label for="functionInput">Input formula:</label>
-                            <input type="text" class="form-control" id="functionInput"
-                                placeholder="2*x^5 - 10*x^3 + 13*x^2 - 7*x + 11" data-input-type="functionInput" />
+                            <input type="text" value="2*x**5 - 10*x**3 + 13*x**2 - 7*x + 11" class="form-control"
+                                id="functionInput" placeholder="2*x^5 - 10*x^3 + 13*x^2 - 7*x + 11"
+                                data-input-type="functionInput" />
+                            <div class="invalid-feedback" id="formula-feedback">
+                                Please enter correct formula.
+                            </div>
                         </div>
                     </div>
                     <div class="row col-12 px-0 mx-0 justify-content-center">
@@ -37,56 +47,48 @@
                         </div>
                         <div class="row col-12 px-0 mx-0 justify-content-center">
                             <div class="inputA col-4">
-                                <input type="text" class="form-control" id="startPointInput" placeholder="0"
+                                <input type="text" value="0" class="form-control " id="startPointInput" placeholder="0"
                                     data-input-type="startPoint" />
+                                <div class="invalid-feedback" id="inputA-feedback">
+                                    Please enter a value.
+                                </div>
                             </div>
                             <div class="inputB col-4">
-                                <input type="text" class="form-control" id="endPointInput" placeholder="1.5"
+                                <input type="text" value="1.5" class="form-control" id="endPointInput" placeholder="1.5"
                                     data-input-type="endPoint" />
+                                <div class="invalid-feedback" id="inputB-feedback">
+                                    Please enter a value.
+                                </div>
                             </div>
                             <div class="inputH col-4">
-                                <input type="text" class="form-control" id="stepInput" placeholder="0.25"
+                                <input type="text" value="0.25" class="form-control" id="stepInput" placeholder="0.25"
                                     data-input-type="step" />
+                                <div class="invalid-feedback" id="step-feedback">
+                                    Please enter a value.
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="chart col-sm-12 col-lg-9 w-100 px-0 px-lg-2" style="position: relative">
+                <div class="chart col-sm-12 col-lg-8 w-100 px-0 px-lg-2 d-flex align-items-center"
+                    style="position: relative">
                     <canvas id="myChart"></canvas>
                 </div>
             </div>
         </main>
-        <footer></footer>
+        <footer class="d-flex flex-column align-items-end px-3 mb-2">
+            <span>
+                Made by WB.
+            </span>
+            <a href="https://github.com/taratatuy">GitHub.</a>
+        </footer>
     </div>
 
     <script defer>
-        // const ctx = document.getElementById('myChart').getContext('2d');
-
-        // const func = '2*x**5 - 10*x**3 + 13*x**2 - 7*x + 11';
-        // const a = 0;
-        // const b = 1.5;
-        // const h = 0.25;
-
-        // const f1 = new SplineInterpolation(a, b, h, func);
-        // const f2 = new SplineInterpolation(a, b, h, 'x^2');
-        // const b1 = new Builder(f1, ctx);
-        // //   b1.draw();
-
-        // setTimeout(() => {
-        //     b1.update(f2);
-        //     // b1.draw();
-        //     console.log('here');
-        // }, 5000);
-
         new Menu()
     </script>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-        crossorigin="anonymous"></script>
+    <script src="libs/bootstrap/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
